--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -39,15 +39,36 @@
             box-shadow: 0 4px 6px rgba(30, 64, 175, 0.4);
         }
 
-        /* Centering for all custom modals */
+        /* --- STYLING MODAL KHUSUS (Meniru Desain Dialog) --- */
         #customDeleteModal, #customAlertModal {
             transition: opacity 0.3s ease-in-out;
+            /* Mengganti opacity Tailwind dengan class kustom untuk backdrop */
         }
-        /* Memastikan flex centering aktif */
+
+        /* Styling Backdrop Blur */
+        .modal-backdrop {
+            background: rgba(255, 255, 255, 0.4); /* Background lebih terang */
+            backdrop-filter: blur(8px); /* Efek blur yang diinginkan */
+            z-index: 49; /* Sedikit di bawah modal content (z-50) */
+        }
+        
+        /* Centering modal content */
         #customDeleteModal .flex, #customAlertModal .flex {
-            align-items: center; /* Setara dengan align-items: center; */
-            justify-content: center; /* Setara dengan justify-content: center; */
+            align-items: center; 
+            justify-content: center;
         }
+
+        .modal-content {
+            border-radius: 20px; /* Border radius besar seperti contoh */
+            box-shadow: 0 5px 30px 0 rgb(0 0 0 / 10%); /* Shadow yang lebih lembut */
+            animation: fadeIn 0.5s ease both;
+        }
+        
+        @keyframes fadeIn {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+        /* --- AKHIR STYLING MODAL KHUSUS --- */
 
         .sidebar-container {
             width: 256px;
@@ -181,9 +202,9 @@
 
     <div id="customDeleteModal" class="hidden fixed inset-0 z-50 overflow-y-auto" aria-labelledby="modal-title" role="dialog" aria-modal="true" style="opacity: 0;">
         <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" onclick="closeDeleteModal()"></div>
+            <div class="fixed inset-0 modal-backdrop transition-opacity" onclick="closeDeleteModal()"></div>
 
-            <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-lg sm:w-full">
+            <div class="inline-block align-middle bg-white modal-content text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-lg sm:w-full">
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
                         <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
@@ -204,12 +225,12 @@
                 </div>
                 <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                     <button type="button" 
-                            class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm"
+                            class="w-full inline-flex justify-center rounded-lg border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm"
                             onclick="confirmDelete()">
                         Hapus Permanen
                     </button>
                     <button type="button" 
-                            class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none sm:mt-0 sm:w-auto sm:text-sm"
+                            class="mt-3 w-full inline-flex justify-center rounded-lg border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none sm:mt-0 sm:w-auto sm:text-sm"
                             onclick="closeDeleteModal()">
                         Batal
                     </button>
@@ -219,12 +240,12 @@
     </div>
     <div id="customAlertModal" class="hidden fixed inset-0 z-50 overflow-y-auto" aria-labelledby="modal-title-alert" role="dialog" aria-modal="true" style="opacity: 0;">
         <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
-            <div class="fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity" onclick="closeAlertModal()"></div>
+            <div class="fixed inset-0 modal-backdrop transition-opacity" onclick="closeAlertModal()"></div>
 
-            <div class="inline-block align-middle bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-sm sm:w-full">
+            <div class="inline-block align-middle bg-white modal-content text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-sm sm:w-full">
                 <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
                     <div class="sm:flex sm:items-start">
-                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full sm:mx-0 sm:h-10 sm:w-10" id="alert-icon-container">
+                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-yellow-100 sm:mx-0 sm:h-10 sm:w-10" id="alert-icon-container">
                             <i class="fas fa-info-circle text-yellow-600" id="alert-icon"></i>
                         </div>
                         <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
@@ -241,7 +262,7 @@
                 </div>
                 <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                     <button type="button" 
-                            class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm"
+                            class="w-full inline-flex justify-center rounded-lg border border-transparent shadow-sm px-4 py-2 bg-blue-600 text-base font-medium text-white hover:bg-blue-700 focus:outline-none sm:ml-3 sm:w-auto sm:text-sm"
                             onclick="closeAlertModal()">
                         OK
                     </button>
