style: ubah warna teks pada logo

--- a/admin_login.html
+++ b/admin_login.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="flex flex-col">
                             <span class="font-extrabold text-lg tracking-wider leading-tight text-gray-800">ASPIRA</span>
-                            <span class="font-bold text-sm text-red-500 leading-tight">PERTA ARUN GAS</span>
+                            <span class="font-bold text-sm text-white leading-tight">PERTA ARUN GAS</span>
                         </div>
                     </div>
                     <h2 class="mt-4 text-2xl font-extrabold text-gray-900">
