--- a/analysis_report.html
+++ b/analysis_report.html
@@ -283,7 +283,7 @@
             </nav>
 
             <div class="p-4 border-t border-blue-700/50">
-                <button class="w-full flex items-center justify-center p-3 text-sm font-medium rounded-xl text-red-300 hover:bg-red-500 hover:text-white transition-colors duration-200" onclick="logout()">
+                <button class="w-full flex items-center justify-center p-3 text-sm font-medium rounded-xl text-white hover:bg-red-500 hover:text-white transition-colors duration-200" onclick="logout()">
                     <i class="fas fa-sign-out-alt w-5 h-5 mr-2"></i>
                     <span class="sidebar-text">Logout</span>
                 </button>
