--- a/admin_login.html
+++ b/admin_login.html
@@ -168,7 +168,7 @@
                     
                     // Pengalihan ke Halaman Dashboard Admin
                     setTimeout(() => {
-                        window.location.href = 'dashboard_admin.html';
+                        window.location.href = 'index.html';
                     }, 500); 
                     
                 } else {
