--- a/form_builder.html
+++ b/form_builder.html
@@ -111,7 +111,7 @@
             </div>
 
             <nav class="flex-grow p-4 space-y-2">
-                <a href="dashboard_admin.html" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
+                <a href="index.html" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
                     <i class="fas fa-home w-5 h-5 mr-3"></i>
                     <span class="sidebar-text">Dashboard</span>
                 </a>
@@ -374,7 +374,7 @@
         }
         
         function goToDashboard() {
-            window.location.href = 'dashboard_admin.html';
+            window.location.href = 'index.html';
         }
         // =========================================================================
         // END SIDEBAR AND SESSION LOGIC
