--- a/analysis_report.html
+++ b/analysis_report.html
@@ -291,7 +291,7 @@
             </div>
 
             <nav class="flex-grow p-4 space-y-2">
-                <a href="index.html" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
+                <a href="dashboard.html" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
                     <i class="fas fa-home w-5 h-5 mr-3"></i>
                     <span class="sidebar-text">Dashboard</span>
                 </a>
@@ -416,7 +416,7 @@
         function checkSession() {
             const adminRole = sessionStorage.getItem('adminRole');
             if (!adminRole) {
-                window.location.href = 'admin_login.html';
+                window.location.href = 'index.html';
                 return;
             }
             if (adminRole !== 'Super Admin') {
@@ -439,7 +439,7 @@
         function logout() {
             sessionStorage.removeItem('adminRole');
             sessionStorage.removeItem('adminUsername');
-            window.location.href = 'admin_login.html';
+            window.location.href = 'index.html';
         }
         
         // NEW FUNCTION: Scroll ke Analisis Global
