--- a/dashboard.html
+++ b/dashboard.html
@@ -140,7 +140,7 @@
                 </a>
                 <a href="analysis_report.html" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
                     <i class="fas fa-chart-bar w-5 h-5 mr-3"></i>
-                    <span class="sidebar-text">Analisis & Laporan</span>
+                    <span class="sidebar-text">Analisis Formulir</span>
                 </a>
                 <a href="admin_management.html" id="admin-management-link" class="sidebar-link flex items-center p-3 rounded-xl transition-colors duration-200 hover:bg-blue-700">
                     <i class="fas fa-users-cog w-5 h-5 mr-3"></i>
