fix: update API_BASE_URL to use the correct localhost path and change database name to aspira_db

--- a/admin_management.html
+++ b/admin_management.html
@@ -323,7 +323,7 @@
     </div>
     
     <script>
-        const API_BASE_URL = 'http://localhost:8080/aspira/api.php';
+        const API_BASE_URL = 'http://localhost/aspira/api.php';
         let adminIdToDelete = null; 
         let alertCallback = null;
         let currentAdmin = null;
