--- a/analysis_report.html
+++ b/analysis_report.html
@@ -381,7 +381,7 @@
         // Mendaftarkan plugin datalabels secara global
         Chart.register(ChartDataLabels);
 
-        const API_BASE_URL = 'http://localhost:8080/aspira/api.php';
+        const API_BASE_URL = 'http://localhost/aspira/api.php';
         let formId = null;
         let allResponses = [];
         let globalFormFieldsDefinition = []; 
