--- a/dashboard.html
+++ b/dashboard.html
@@ -279,7 +279,7 @@
         </div>
     </div>
     <script>
-        const API_BASE_URL = 'http://localhost:8080/aspira/api.php';
+        const API_BASE_URL = 'http://localhost/aspira/api.php';
         let allForms = [];
         let currentPage = 1;
         const itemsPerPage = 5;
