--- a/form_builder.html
+++ b/form_builder.html
@@ -340,7 +340,7 @@
     </div>
 
     <script>
-        const API_BASE_URL = 'http://localhost:8080/aspira/api.php';
+        const API_BASE_URL = 'http://localhost/aspira/api.php';
         let formFields = [];
         let activeFieldId = null; 
         let fieldIdToDelete = null; 
