--- a/form_public.html
+++ b/form_public.html
@@ -277,7 +277,7 @@
         
     <script>
         // --- KONSTANTA & VARIABEL ---
-        const API_BASE_URL = 'http://localhost:8080/aspira/api.php';
+        const API_BASE_URL = 'http://localhost/aspira/api.php';
         const N8N_WEBHOOK_URL = 'http://localhost:5678/webhook-test/csr-notifier'; 
 
         let formStructure = null; // Menyimpan struktur form yang dimuat
